styles.css
/* css styles */

@font-face {
	font-display: swap;
	font-family: 'Euclid Circular B';
	src: url('/assets/fonts/EuclidCircularB-Regular-WebS.woff2') format('woff2');
	font-style: normal;
	font-weight: 400;
}

@font-face {
	font-display: swap;
	font-family: 'Euclid Circular B';
	src: url('/assets/fonts/EuclidCircularB-Medium-WebS.woff2') format('woff2');
	font-style: normal;
	font-weight: 500;
}

@font-face {
	font-display: swap;
	font-family: 'Euclid Circular B';
	src: url('/assets/fonts/EuclidCircularB-Semibold-WebS.woff2') format('woff2');
	font-style: normal;
	font-weight: 600;
}

.navbar {
	background-color: #3a1e3e;
}

.navbar-title {
	color: #fff;
	font-weight: bold;
}

.navbar-title:hover {
	color: #ffe880;
}

.navbar-brand-logo {
	fill: #fff;
}

.aa-SubmitIcon {
	fill: #fff;
}

.aa-SubmitIcon:hover {
	fill: #ffe880;
}

.navbar .quarto-navbar-tools .quarto-navigation-tool {
	color: #fff;
}

.navbar .quarto-navbar-tools .quarto-navigation-tool:hover {
	color: #ffe880;
}

.navbar li.nav-item a.nav-link {
	/* font-weight: bold; */
	color: #fff;
}

.navbar li.nav-item a.nav-link:hover {
	color: #ffe880;
}

[data-bs-theme='dark'] .navbar-toggler-icon {
	--bs-navbar-toggler-icon-bg: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='%23ffffff' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
}

[data-bs-theme='dark'] .navbar-toggler-icon:hover,
.navbar-toggler-icon:focus {
	--bs-navbar-toggler-icon-bg: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='%23ffe880' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
}

.bi-envelope,
.anchorjs-link {
	color: #3a1e3e;
}

/* .sidebar nav[role=doc-toc] ul>li>a.active, .sidebar nav[role=doc-toc] ul>li>ul>li>a.active {
	border-left: 1px solid #3a1e3e;
	color: #181818 !important;
	text-decoration: underline #ffe880 3px;
}

.sidebar nav[role=doc-toc] ul>li>a:hover, .sidebar nav[role=doc-toc] ul>li>ul>li>a:hover {
	color: #181818 !important;
	text-decoration: underline #ffe880 3px;
} */

.quarto-category {
	color: #181818;
}

::selection {
	background-color: #ffe880;
}

.sidebar-navigation {
	overflow: scroll;
	scrollbar-color: #a5d7d2 white;
	scrollbar-width: thin;
}

h1 {
	/* color: #005aff; */
	text-decoration: underline;
	text-decoration-color: #ffe880;
	text-decoration-thickness: 4px;
}

.callout-tip,
.callout-note {
	border: 1.5px solid rgba(255, 232, 128, 0.85) !important;
	border-left-width: 5px !important;
}

.callout-header {
	background-color: #ffe880 !important;
}

.col-centered {
	float: none;
	margin-top: auto;
	margin-bottom: auto;
}

.card {
	border-radius: 0.2em;
	&:hover {
		background-color: #ffe880;
		border-color: #3a1e3e;
	}
}

